# smudgy

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODOs.md  TODOs.txt  install.sh  mnras  omp_test  omp_test.cpp  pyproject.toml  setup.py
.github/workflows/: build-artifacts.yml  ci.yml  publish-pypi.yml  publish.yml  release.yml  troubleshooting.yml
analysis/Deposition/: create_datasets.ipynb  mass_conservation_test.ipynb  results_benchmark_0.pkl  results_benchmark_1.pkl  results_benchmark_2.pkl
analysis/legacy/: scalings_interpolation.ipynb
docs/: api.md  api.rst  backend.rst  collection.md  collection.rst  conf.py  cpp_functions.rst  grid.md  grid.rst  index.md  index.rst  install.md  install.rst  introduction.rst  kernels.md  kernels.rst  pointcloud.rst  python_functions.rst  quickstart.md  quickstart.rst  requirements.txt  smooth.rst  tutorials_advanced.md  tutorials_advanced.rst  tutorials_basic.md  tutorials_basic.rst  usage.md  usage.rst  utils.md  utils.rst
docs/_static/: custom.css
documentation/: scalings_interpolation.ipynb
documentation/Deposition/: benchmarking.ipynb  create_datasets.ipynb  deposition.ipynb  overview_plot.ipynb  results_benchmark_4.pkl  test_consistency_python_cpp.ipynb  test_higher_order_methods.ipynb  test_openmp_implementation.ipynb  testing_depositions_debug.ipynb  tests.ipynb
smudgy/: __init__.py  collection.py  grid.py  main.py  ops.py  pointcloud.py  smooth.py  utils.py
smudgy/bindings/: _bindings.cpp
sph_lib/: __init__.py  collection.py  deposition.py  deposition_TO_DELETE.py  grid.py  interpolation.py  kernels.py  ops.py  utils.py
tests/: test_backend_consistency.py  test_deposition.py  test_input_consistency.py  test_interpolation.py  test_kernel_input.py  test_openmp.py  test_openmp_consistency.py
(+55 files in other folders)
