[build-system]
requires = ["setuptools", "wheel", "numpy", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "sph_lib"
version = "0.1.0"
description = "SPH mesh package"
authors = [
    { name = "Mauro Bernardini", email = "mauro.bernardini1313@gmail.com" }
    ]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sph_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
