[build-system]
requires = ["setuptools", "wheel", "numpy", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "smudgy"
version = "0.1.1"
description = "Point Cloud smoothing and interpolation package."
authors = [
    { name = "Mauro Bernardini", email = "mauro.bernardini1313@gmail.com" }
    ]
dependencies = ["numpy", "scipy", "pybind11"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smudgy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP"]
ignore = ["E501", "D203", "D213"]
